music script: now quit/stop commands delete mpvloop mpvpause. nvim config: now using nvim-treesitter. kitty config file: added colors name

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -4,13 +4,22 @@ background_opacity 0.5
 # Font
 font_family MesloLGS NF
 
+
+#:black
 color1  #1b1c1c
+#:red
 color2  #ff4046
+#:green
 color3  #50ff40
+#:yellow
 color4  #f9ff40
+#:blue
 color5  #4043ff
+#:magenta
 color6  #a640ff
+#:cyan
 color7  #40bcff
+#:white
 color8  #c9c9c9
 
 color9  #6a6b8a
@@ -21,4 +30,3 @@ color13 #3029ff
 color14 #8229ff
 color15 #29eaff
 color16 #ffffff
-
