music script: some fixes. and some other changes

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -4,9 +4,8 @@ background_opacity 0.5
 # Font
 font_family MesloLGS NF
 
-
 #:black
-color1  #1b1c1c
+color1  #5e5d5d
 #:red
 color2  #ff4046
 #:green
