dotfiles: few changes. added animated-wallpaper script

--- a/picom/picom.conf
+++ b/picom/picom.conf
@@ -11,10 +11,10 @@ shadow = true;
 
 # The blur radius for shadows, in pixels. (defaults to 12)
 # shadow-radius = 12
-shadow-radius = 7;
+shadow-radius = 10;
 
 # The opacity of shadows. (0.0 - 1.0, defaults to 0.75)
-# shadow-opacity = .75
+shadow-opacity = .75
 
 # The left offset for shadows, in pixels. (defaults to -15)
 # shadow-offset-x = -15
@@ -136,7 +136,6 @@ focus-exclude = [ "class_g = 'Cairo-clock'" ];
 #
 # opacity-rule = []
 
-
 #################################
 #           Corners             #
 #################################
@@ -203,8 +202,8 @@ blur-background-exclude = [
 ];
 
 # Blur
-blur-method = "dual_kawase";
 blur-background = true;
+blur-method = "dual_kawase";
 
 #################################
 #       General Settings        #
