--- a/i3/config
+++ b/i3/config
@@ -201,12 +201,15 @@ gaps inner 7
 smart_borders on
 
 # Picom
-exec_always --no-startup-id picom --experimental-backends --config=/home/pietrovn/.config/picom/picom.conf
+#exec_always --no-startup-id picom --experimental-backends --config=/home/pietrovn/.config/picom/picom.conf
 #exec_always --no-startup-id picom --config=/home/pietrovn/.config/picom/picom.conf
 
 # Wallpaper
 #exec_always --no-startup-id feh --no-fehbg --bg-fill /home/pietrovn/Images/wallpapers/full_metal/full_metal_alchemist1.jpg
-exec_always --no-startup-id feh --no-fehbg --bg-fill /home/pietrovn/Images/wallpapers/own/PurpleVibe.png
+exec_always --no-startup-id feh --no-fehbg --bg-fill /home/pietrovn/Wallpapers/own/PurpleVibe.png
+
+# Animated wallpaper
+exec_always sh /home/pietrovn/Dev/dotfiles/scripts/animated-wallpaper  &
 
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
