--- a/i3blocks/config
+++ b/i3blocks/config
@@ -10,9 +10,9 @@ interval=900
 command=echo "$(cat /sys/class/power_supply/BAT0/capacity)%"
 interval=300
 
-[wifi]
-command=echo "$(iwctl station wlan0 show | awk '/Connected network/{print $3,$4}')"
-interval=300
+#[wifi]
+#command=echo "$(iwctl station wlan0 show | awk '/Connected network/{print $3,$4}')"
+#interval=300
 
 #[speed]
 #command=echo "$(iwctl station wlan0 show | grep TxBitrate |awk '{print $2}' | tail -n3) | $(iwctl station wlan0 show | grep RxBitrate |awk '{print $2}' | tail -n3 )"
