--- a/sway/config
+++ b/sway/config
@@ -1,18 +1,11 @@
-# Default config for sway
-#
-# Copy this to ~/.config/sway/config and edit it to your liking.
-#
-# Read `man 5 sway` for a complete reference.
+# Screen sharing
+exec dbus-update-activation-environment DISPLAY I3SOCK SWAYSOCK WAYLAND_DISPLAY XDG_CURRENT_DESKTOP=sway
+exec systemctl --user import-environment WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 
 ### Variables
 #
 # Logo key. Use Mod1 for Alt.
 set $mod Mod4
-# Home row direction keys, like vim
-set $left h
-set $down j
-set $up k
-set $right l
 
 # Terminal (Alacritty)
 set $term alacritty
@@ -108,30 +101,23 @@ set $menu bemenu-run -n  | xargs swaymsg exec --
 	bindsym XF86MonBrightnessUp exec --no-startup-id light -A 5
 	bindsym XF86MonBrightnessDown exec --no-startup-id light -U 5
 
-	# Screen shot
+	# Screenshot
 	bindsym $mod+p exec --no-startup-id grim - | wl-copy
 	bindsym $mod+Shift+p exec --no-startup-id grim -g "$(slurp)" - | wl-copy
+
+	# Sticky toggle
+	bindsym $mod+Shift+s sticky toggle
 #
 # Moving around:
 #
-    # Move your focus around
-    bindsym $mod+$left focus left
-    bindsym $mod+$down focus down
-    bindsym $mod+$up focus up
-    bindsym $mod+$right focus right
 
-    # Or use $mod+[up|down|left|right]
+    # Focus
     bindsym $mod+Left focus left
     bindsym $mod+Down focus down
     bindsym $mod+Up focus up
     bindsym $mod+Right focus right
-
-    # Move the focused window with the same, but add Shift
-    bindsym $mod+Shift+$left move left
-    bindsym $mod+Shift+$down move down
-    bindsym $mod+Shift+$up move up
-    bindsym $mod+Shift+$right move right
-    # Ditto, with arrow keys
+    
+    # Move focused window
     bindsym $mod+Shift+Left move left
     bindsym $mod+Shift+Down move down
     bindsym $mod+Shift+Up move up
@@ -169,7 +155,7 @@ set $menu bemenu-run -n  | xargs swaymsg exec --
     # You can "split" the current object of your focus with
     # $mod+b or $mod+v, for horizontal and vertical splits
     # respectively.
-    bindsym $mod+b splith
+    bindsym $mod+h splith
     bindsym $mod+v splitv
 
     # Switch the current container between different layout styles
@@ -209,12 +195,6 @@ mode "resize" {
     # right will grow the containers width
     # up will shrink the containers height
     # down will grow the containers height
-    bindsym $left resize shrink width 10px
-    bindsym $down resize grow height 10px
-    bindsym $up resize shrink height 10px
-    bindsym $right resize grow width 10px
-
-    # Ditto, with arrow keys
     bindsym Left resize shrink width 10px
     bindsym Down resize grow height 10px
     bindsym Up resize shrink height 10px
@@ -225,7 +205,6 @@ mode "resize" {
     bindsym Escape mode "default"
 }
 bindsym $mod+r mode "resize"
-
 
 # Touchpad
 input "1739:33364:Synaptics_TM3336-004" {
@@ -242,6 +221,7 @@ default_border pixel 2
 
 # Custom border color
 client.focused #4a1485 #4a1485 #ffffff
+#client.unfocused #ffffff #ffffff #ffffff
 
 # Gaps
 gaps inner 7
@@ -255,15 +235,24 @@ smart_borders on
 # Animated wallpaper (mpvpaper)
 exec_always --no-startup-id killall mpvpaper
 exec_always --no-startup-id mpvpaper -o "loop=yes no-audio framedrop=vo" eDP-1 /home/pietrovn/Wallpapers/animated/WatchingTheUniverse.webm
+#exec_always --no-startup-id mpvpaper -o "loop=yes no-audio framedrop=vo" eDP-1 /home/pietrovn/Wallpapers/animated/montanha_be_like-export-export.gif
+
+# Lockscreen 
+exec_always --no-startup-id swayidle -w timeout 100 "lockscreen"
+
+# Suspend
+exec_always --no-startup-id swayidle -w timeout 300  "systemctl suspend-then-hibernate"
 
 # Lockscreen
-exec_always --no-startup-id swayidle -w before-sleep lockscreen
+exec_always --no-startup-id swayidle -w before-sleep "lockscreen"
+
+# Inhibit idle
+for_window [title="."] inhibit_idle fullscreen
 
 # Waybar
 bar {
     position top
     swaybar_command waybar
 }
-
 
 include @sysconfdir@/sway/config.d/*
