Music script: Use pidof instead of pgrep to prevent showing 'process was not found' when used with mpvpaper, music info will show up correctly when using 'music play' with links, added support to show music on neofetch. Added neofetch dotfile. Change some parameters on waybar css dotfile. I don't remember the other changes

--- a/waybar/config
+++ b/waybar/config
@@ -6,8 +6,8 @@
 
     // "width": 1280, // Waybar width
     // Choose the order of the modules
-    "modules-left": ["sway/workspaces", "sway/mode", "custom/media"],
-    
+    "modules-left": ["sway/workspaces", "sway/mode"],
+    //"modules-left": ["sway/workspaces", "sway/mode", "sway/window"],    
     //"modules-center": ["sway/window"],
 
     "modules-right": ["pulseaudio", "network", "cpu", "memory", "temperature", "backlight", "keyboard-state", "battery", "battery#bat2", "clock", "tray"],
