--- a/neofetch/config.conf
+++ b/neofetch/config.conf
@@ -14,6 +14,7 @@ print_info() {
     info "  -> Uptime" uptime
     info "  -> Packages" packages
     info "  -> Shell" shell
+	prin
 	prin "- Hardware"
     info "  -> Resolution" resolution
     info "  -> Terminal Font" term_font
@@ -21,9 +22,10 @@ print_info() {
     info "  -> GPU" gpu
 	info "  -> GPU Driver" gpu_driver  # Linux/macOS only
     info "  -> Memory" memory
+	prin
 	prin "- Music"
 	prin "  -> Music Player" "mpv"
-	if [[ $(pidof mpv) ]]; then prin "  -> Song" "$(echo '{ "command": ["get_property", "name"] }' | socat - ${XDG_RUNTIME_DIR}/mpvsocket | awk -F":" '{print $2}' | awk -F"," '{print $1}' | awk '{gsub(/"/,""); print}')"; fi
+	[[ $(pidof mpv) ]] && prin "  -> Song" "$(echo '{ "command": ["get_property", "name"] }' | socat - ${XDG_RUNTIME_DIR}/mpvsocket | awk -F":" '{print $2}' | awk -F"," '{print $1}' | awk '{gsub(/"/,""); print}')"
 
     # info "CPU Usage" cpu_usage
     # info "Disk" disk
@@ -118,7 +120,7 @@ uptime_shorthand="on"
 # Example:
 # on:   '1801MiB / 7881MiB (22%)'
 # off:  '1801MiB / 7881MiB'
-memory_percent="off"
+memory_percent="on"
 
 # Change memory output unit.
 #
