--- a/sway/config
+++ b/sway/config
@@ -1,6 +1,10 @@
-# Screen sharing
+# Pipewire
+exec gentoo-pipewire-launcher
+
+# Screensharing
 exec dbus-update-activation-environment DISPLAY I3SOCK SWAYSOCK WAYLAND_DISPLAY XDG_CURRENT_DESKTOP=sway
-exec systemctl --user import-environment WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
+#exec dbus-launch /usr/libexec/xdg-desktop-portal
+#exec dbus-launch /usr/libexec/xdg-desktop-portal-wlr
 
 ### Variables
 #
@@ -81,7 +85,7 @@ set $menu bemenu-run -n -nf "#7121c2" --tf "#7121c2" --hf "#8e4dff"  | xargs swa
 # Custom:
 #
 	# Music
-	bindsym XF86AudioPause exec --no-startup-id music pause
+	bindsym XF86AudioPlay exec --no-startup-id music pause
 	bindsym XF86AudioNext exec --no-startup-id music advance
 	bindsym XF86AudioPrev exec --no-startup-id music return
 
@@ -98,12 +102,12 @@ set $menu bemenu-run -n -nf "#7121c2" --tf "#7121c2" --hf "#8e4dff"  | xargs swa
 	bindsym XF86AudioMicMute exec --no-startup-id pactl set-source-mute @DEFAULT_SOURCE@ toggle
 
 	# Scren brightness
-	bindsym XF86MonBrightnessUp exec --no-startup-id light -A 5
-	bindsym XF86MonBrightnessDown exec --no-startup-id light -U 5
+	bindsym XF86MonBrightnessUp exec --no-startup-id light -A 10
+	bindsym XF86MonBrightnessDown exec --no-startup-id light -U 10
 
 	# Screenshot
-	bindsym $mod+p exec --no-startup-id grim - | wl-copy
-	bindsym $mod+Shift+p exec --no-startup-id grim -g "$(slurp)" - | wl-copy
+	bindsym $mod+p exec --no-startup-id grim - | wl-copy -t image/png
+	bindsym $mod+Shift+p exec --no-startup-id grim -g "$(slurp)" - | wl-copy -t image/png
 
 	# Sticky toggle
 	bindsym $mod+Shift+s sticky toggle
@@ -231,23 +235,12 @@ gaps inner 7
 smart_borders on
 
 # Wallpaper
-#output * bg /home/pietrovn/Wallpapers/own/PurpleVibe.png stretch
-output * bg /home/pietrovn/wallpapers/WatchingTheUniverse.png stretch
-
-# Animated wallpaper (mpvpaper)
 exec_always --no-startup-id killall mpvpaper
-#exec_always --no-startup-id mpvpaper -o "loop=yes no-audio framedrop=vo" eDP-1 /home/pietrovn/wallpapers/animated/WatchingTheUniverse.mp4
-#exec_always --no-startup-id mpvpaper -o "loop=yes no-audio framedrop=vo" eDP-1 /home/pietrovn/wallpapers/animated/teper/montanha_be_like-export.gif
+#exec_always --no-startup-id mpvpaper -o "loop=yes no-audio framedrop=vo" eDP-1 /home/pietrovn/wallpapers/purple_sunset.webm
+exec_always --no-startup-id swaybg -i /home/pietrovn/wallpapers/purple_sunset.png
 
 # Lockscreen 
 exec_always --no-startup-id swayidle -w timeout 100 "lockscreen"
-exec_always --no-startup-id swayidle -w lock "lockscreen"
-
-# Suspend
-exec_always --no-startup-id swayidle -w timeout 300  "systemctl suspend-then-hibernate"
-
-# Lockscreen
-exec_always --no-startup-id swayidle -w before-sleep "lockscreen"
 
 # Inhibit idle
 for_window [title="."] inhibit_idle fullscreen
@@ -255,10 +248,11 @@ for_window [title="."] inhibit_idle fullscreen
 # Waybar
 bar {
     position top
-    swaybar_command waybar
+    status_command while sleep 10; do sh ~/.config/sway/bar.sh; done
 }
 
-# Mako (Notification Daemon)
-exec_always mako
+exec dbus-update-activation-environment DISPLAY SWAYSOCK WAYLAND_DISPLAY XDG_CURRENT_DESKTOP=sway
+exec dbus-launch /usr/libexec/xdg-desktop-portal
+exec dbus-launch /usr/libexec/xdg-desktop-portal-wlr
 
 include @sysconfdir@/sway/config.d/*
