--- a/picom/picom.conf
+++ b/picom/picom.conf
@@ -2,27 +2,28 @@
 #             Shadows           #
 #################################
 
+
 # Enabled client-side shadows on windows. Note desktop windows
 # (windows with '_NET_WM_WINDOW_TYPE_DESKTOP') never get shadow,
 # unless explicitly requested using the wintypes option.
 #
 # shadow = false
-shadow = true;
+shadow = false;
 
 # The blur radius for shadows, in pixels. (defaults to 12)
 # shadow-radius = 12
-shadow-radius = 10;
+shadow-radius = 12;
 
 # The opacity of shadows. (0.0 - 1.0, defaults to 0.75)
-shadow-opacity = .75
+shadow-opacity = 0.75
 
 # The left offset for shadows, in pixels. (defaults to -15)
 # shadow-offset-x = -15
-shadow-offset-x = -7;
+shadow-offset-x = -15;
 
 # The top offset for shadows, in pixels. (defaults to -15)
 # shadow-offset-y = -15
-shadow-offset-y = -7;
+shadow-offset-y = -15;
 
 # Red color value of shadow (0.0 - 1.0, defaults to 0).
 # shadow-red = 0
@@ -44,8 +45,6 @@ shadow-offset-y = -7;
 # shadow-exclude = []
 shadow-exclude = [
   "name = 'Notification'",
-  "class_g = 'firefox'",
-  "class_g = 'slop'",
   "class_g = 'Conky'",
   "class_g ?= 'Notify-osd'",
   "class_g = 'Cairo-clock'",
@@ -78,11 +77,11 @@ fading = true;
 
 # Opacity change between steps while fading in. (0.01 - 1.0, defaults to 0.028)
 # fade-in-step = 0.028
-fade-in-step = 0.03;
+fade-in-step = 0.07;
 
 # Opacity change between steps while fading out. (0.01 - 1.0, defaults to 0.03)
 # fade-out-step = 0.03
-fade-out-step = 0.03;
+fade-out-step = 0.07;
 
 # The time between steps in fade step, in milliseconds. (> 0, defaults to 10)
 # fade-delta = 10
@@ -110,7 +109,7 @@ inactive-opacity = 0.8;
 # frame-opacity = 1.0
 frame-opacity = 0.7;
 
-# Let inactive opacity set by -i override the '_NET_WM_OPACITY' values of windows.
+# Let inactive opacity set by -i override the '_NET_WM_WINDOW_OPACITY' values of windows.
 # inactive-opacity-override = true
 inactive-opacity-override = false;
 
@@ -136,6 +135,7 @@ focus-exclude = [ "class_g = 'Cairo-clock'" ];
 #
 # opacity-rule = []
 
+
 #################################
 #           Corners             #
 #################################
@@ -159,24 +159,24 @@ rounded-corners-exclude = [
 
 # Parameters for background blurring, see the *BLUR* section for more information.
 # blur-method =
-# blur-size = 12
+# blur-size = 20
 #
 # blur-deviation = false
 #
-# blur-strength = 5
+# blur-strength = 70
 
 # Blur background of semi-transparent / ARGB windows.
 # Bad in performance, with driver-dependent behavior.
 # The name of the switch may change without prior notifications.
 #
-# blur-background = false
+# blur-background = true
 
 # Blur background of windows when the window frame is not opaque.
 # Implies:
 #    blur-background
 # Bad in performance, with driver-dependent behavior. The name may change.
 #
-# blur-background-frame = false
+# blur-background-frame = true
 
 
 # Use fixed blur strength rather than adjusting according to window opacity.
@@ -188,22 +188,17 @@ rounded-corners-exclude = [
 #   blur-kern = "5,5,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1";
 #
 # blur-kern = ""
-blur-kern = "3x3box";
 
+# blur-kern = "3x3box";
+# blur-method = "gaussian";
 
 # Exclude conditions for background blur.
 # blur-background-exclude = []
 blur-background-exclude = [
-  "class_g = 'slop'",
-  "class_g = 'firefox'",
   "window_type = 'dock'",
   "window_type = 'desktop'",
   "_GTK_FRAME_EXTENTS@:c"
 ];
-
-# Blur
-blur-background = true;
-blur-method = "dual_kawase";
 
 #################################
 #       General Settings        #
@@ -215,8 +210,8 @@ blur-method = "dual_kawase";
 # Specify the backend to use: `xrender`, `glx`, or `xr_glx_hybrid`.
 # `xrender` is the default one.
 #
-backend = "glx";
-# backend = "xrender";
+#backend = "glx";
+backend = "xrender";
 
 # Enable/disable VSync.
 # vsync = false
@@ -241,17 +236,11 @@ mark-ovredir-focused = true;
 # detect-rounded-corners = false
 detect-rounded-corners = true;
 
-# Detect '_NET_WM_OPACITY' on client windows, useful for window managers
-# not passing '_NET_WM_OPACITY' of client windows to frame windows.
+# Detect '_NET_WM_WINDOW_OPACITY' on client windows, useful for window managers
+# not passing '_NET_WM_WINDOW_OPACITY' of client windows to frame windows.
 #
 # detect-client-opacity = false
 detect-client-opacity = true;
-
-# Specify refresh rate of the screen. If not specified or 0, picom will
-# try detecting this with X RandR extension.
-#
-# refresh-rate = 60
-refresh-rate = 0;
 
 # Use EWMH '_NET_ACTIVE_WINDOW' to determine currently focused window,
 # rather than listening to 'FocusIn'/'FocusOut' event. Might have more accuracy,
@@ -278,11 +267,11 @@ refresh-rate = 0;
 detect-transient = true;
 
 # Use 'WM_CLIENT_LEADER' to group windows, and consider windows in the same
-# group focused at the same time. 'WM_TRANSIENT_FOR' has higher priority if
-# detect-transient is enabled, too.
+# group focused at the same time. This usually means windows from the same application
+# will be considered focused or unfocused at the same time.
+# 'WM_TRANSIENT_FOR' has higher priority if detect-transient is enabled, too.
 #
 # detect-client-leader = false
-detect-client-leader = true;
 
 # Resize damaged region by a specific number of pixels.
 # A positive value enlarges it while a negative one shrinks it.
@@ -307,21 +296,21 @@ detect-client-leader = true;
 # practically happened) and may not work with blur-background.
 # My tests show a 15% performance boost. Recommended.
 #
-# glx-no-stencil = false
+glx-no-stencil = true
 
 # GLX backend: Avoid rebinding pixmap on window damage.
 # Probably could improve performance on rapid window content changes,
 # but is known to break things on some drivers (LLVMpipe, xf86-video-intel, etc.).
 # Recommended if it works.
 #
-# glx-no-rebind-pixmap = false
+glx-no-rebind-pixmap = true
 
 # Disable the use of damage information.
 # This cause the whole screen to be redrawn everytime, instead of the part of the screen
 # has actually changed. Potentially degrades the performance, but might fix some artifacts.
 # The opposing option is use-damage
 #
-# no-use-damage = false
+# no-use-damage = false;
 use-damage = true;
 
 # Use X Sync fence to sync clients' draw calls, to make sure all draw
@@ -423,3 +412,4 @@ wintypes:
   popup_menu = { opacity = 0.8; }
   dropdown_menu = { opacity = 0.8; }
 };
+
