--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -1,17 +1,12 @@
 # Opacity
 background_opacity: 0.7
 
-# P10k font
-font:
-  normal:
-    family: "MesloLGS NF"
-
 # Themes
 schemes:
   purple-vibe: &purple-vibe
-    #primary:
-    #  background: '#282a36'
-    #  foreground: '#f8f8f2'
+    primary:
+      background: '#282a36'
+      foreground: '#f8f8f2'
 
     normal:
       black:   '#1b1c1c'
