Update neofetch config

--- a/neofetch/config.conf
+++ b/neofetch/config.conf
@@ -4,26 +4,25 @@ print_info() {
     info title
     info underline
 
-    prin "- System"
-    info "  -> Host" model
-    info "  -> OS" distro
-    info "  -> Kernel" kernel
-    info "  -> DE" de
-    info "  -> WM" wm
-    info "  -> Terminal" term
-    info "  -> Uptime" uptime
-    info "  -> Packages" packages
-    info "  -> Shell" shell
-    prin
-    prin "- Hardware"
-    info "  -> Resolution" resolution
-    info "  -> Terminal Font" term_font
-    info "  -> CPU" cpu
-    info "  -> GPU" gpu
-    info "  -> GPU Driver" gpu_driver  # Linux/macOS only
-    info "  -> Memory" memory
-
-    # info "CPU Usage" cpu_usage
+    info "OS" distro
+    info "Host" model
+    info "Kernel" kernel
+    info "Uptime" uptime
+    info "Packages" packages
+    info "Shell" shell
+    info "Resolution" resolution
+    info "DE" de
+    info "WM" wm
+    info "WM Theme" wm_theme
+    info "Theme" theme
+    info "Icons" icons
+    info "Terminal" term
+    info "Terminal Font" term_font
+    info "CPU" cpu
+    info "GPU" gpu
+    info "Memory" memory
+	info "GPU Driver" gpu_driver  # Linux/macOS only
+    info "CPU Usage" cpu_usage
     # info "Disk" disk
     # info "Battery" battery
     # info "Font" font
@@ -159,7 +158,7 @@ package_managers="on"
 # Example:
 # on:  '/bin/bash'
 # off: 'bash'
-shell_path="off"
+shell_path="on"
 
 # Show $SHELL version
 #
@@ -249,7 +248,7 @@ cpu_cores="logical"
 # C:   'Intel i7-6500U (4) @ 3.1GHz [27.2°C]'
 # F:   'Intel i7-6500U (4) @ 3.1GHz [82.0°F]'
 # off: 'Intel i7-6500U (4) @ 3.1GHz'
-cpu_temp="on"
+cpu_temp="off"
 
 
 # GPU
@@ -325,7 +324,7 @@ gtk_shorthand="off"
 # Example:
 # on:  'Numix [GTK2], Adwaita [GTK3]'
 # off: 'Adwaita [GTK3]'
-gtk2="on"
+gtk2="off"
 
 # Enable/Disable gtk3 Theme / Icons / Font
 #
@@ -336,7 +335,7 @@ gtk2="on"
 # Example:
 # on:  'Numix [GTK2], Adwaita [GTK3]'
 # off: 'Numix [GTK2]'
-gtk3="on"
+gtk3="off"
 
 
 # IP Address
