--- a/kernel-config/.config
+++ b/kernel-config/.config
@@ -12,7 +12,6 @@ CONFIG_LD_VERSION=0
 CONFIG_LD_IS_LLD=y
 CONFIG_LLD_VERSION=130000
 CONFIG_CC_CAN_LINK=y
-CONFIG_CC_CAN_LINK_STATIC=y
 CONFIG_CC_HAS_ASM_GOTO=y
 CONFIG_CC_HAS_ASM_GOTO_OUTPUT=y
 CONFIG_TOOLS_SUPPORT_RELR=y
@@ -623,7 +622,7 @@ CONFIG_HAVE_KVM_PM_NOTIFIER=y
 CONFIG_VIRTUALIZATION=y
 CONFIG_KVM=y
 CONFIG_KVM_WERROR=y
-CONFIG_KVM_INTEL=y
+# CONFIG_KVM_INTEL is not set
 CONFIG_KVM_AMD=y
 CONFIG_KVM_XEN=y
 CONFIG_AS_AVX512=y
@@ -1728,35 +1727,19 @@ CONFIG_WLAN=y
 # CONFIG_WLAN_VENDOR_ADMTEK is not set
 CONFIG_ATH_COMMON=m
 CONFIG_WLAN_VENDOR_ATH=y
-CONFIG_ATH_DEBUG=y
-CONFIG_ATH5K=m
-# CONFIG_ATH5K_DEBUG is not set
-CONFIG_ATH5K_PCI=y
-CONFIG_ATH9K_HW=m
-CONFIG_ATH9K_COMMON=m
-CONFIG_ATH9K_BTCOEX_SUPPORT=y
-CONFIG_ATH9K=m
-CONFIG_ATH9K_PCI=y
-CONFIG_ATH9K_AHB=y
-# CONFIG_ATH9K_DEBUGFS is not set
-# CONFIG_ATH9K_DYNACK is not set
-# CONFIG_ATH9K_WOW is not set
-CONFIG_ATH9K_RFKILL=y
-# CONFIG_ATH9K_CHANNEL_CONTEXT is not set
-CONFIG_ATH9K_PCOEM=y
-# CONFIG_ATH9K_PCI_NO_EEPROM is not set
+# CONFIG_ATH_DEBUG is not set
+# CONFIG_ATH5K is not set
+# CONFIG_ATH5K_PCI is not set
+# CONFIG_ATH9K is not set
 # CONFIG_ATH9K_HTC is not set
-# CONFIG_ATH9K_HWRNG is not set
 # CONFIG_CARL9170 is not set
-CONFIG_ATH6KL=m
-# CONFIG_ATH6KL_USB is not set
-# CONFIG_ATH6KL_DEBUG is not set
+# CONFIG_ATH6KL is not set
 # CONFIG_AR5523 is not set
 # CONFIG_WIL6210 is not set
 CONFIG_ATH10K=m
 CONFIG_ATH10K_CE=y
 CONFIG_ATH10K_PCI=m
-CONFIG_ATH10K_USB=m
+# CONFIG_ATH10K_USB is not set
 # CONFIG_ATH10K_DEBUG is not set
 # CONFIG_ATH10K_DEBUGFS is not set
 # CONFIG_WCN36XX is not set
