Kernel: update to 5.16.10

--- a/kernel-config/.config
+++ b/kernel-config/.config
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/x86 5.16.4-zen1 Kernel Configuration
+# Linux/x86 5.16.10-zen1 Kernel Configuration
 #
 CONFIG_CC_VERSION_TEXT="clang version 13.0.0"
 CONFIG_GCC_VERSION=0
@@ -170,6 +170,7 @@ CONFIG_HAVE_UNSTABLE_SCHED_CLOCK=y
 #
 # Scheduler features
 #
+# CONFIG_SCHED_ALT is not set
 # CONFIG_UCLAMP_TASK is not set
 # end of Scheduler features
 
@@ -2752,6 +2753,7 @@ CONFIG_DUMMY_CONSOLE=y
 CONFIG_DUMMY_CONSOLE_COLUMNS=80
 CONFIG_DUMMY_CONSOLE_ROWS=25
 CONFIG_FRAMEBUFFER_CONSOLE=y
+# CONFIG_FRAMEBUFFER_CONSOLE_LEGACY_ACCELERATION is not set
 CONFIG_FRAMEBUFFER_CONSOLE_DETECT_PRIMARY=y
 # CONFIG_FRAMEBUFFER_CONSOLE_ROTATION is not set
 # end of Console display driver support
