[Kernel Config]: Update kernel config [Dotfiles]: Update dotfiles

--- a/cava/config
+++ b/cava/config
@@ -86,7 +86,7 @@ bar_width = 1
 # 'stereo' mirrors both channels with low frequencies in center.
 # 'mono' outputs left to right lowest to highest frequencies.
 # 'mono_option' set mono to either take input from 'left', 'right' or 'average'.
-; channels = stereo
+channels = mono
 ; mono_option = average
 
 # Raw output target. A fifo will be created if target does not exist.
@@ -138,7 +138,7 @@ gradient_color_8 = '#200040'
 
 # Percentage value for integral smoothing. Takes values from 0 - 100.
 # Higher values means smoother, but less precise. 0 to disable.
-integral = 70
+integral = 50
 
 # Disables or enables the so-called "Monstercat smoothing" with or without "waves". Set to 0 to disable.
 monstercat = 1
