--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -2,13 +2,13 @@
 TERM: 'alacritty'
 
 # Opacity
-background_opacity: 1.0
+window.opacity: 1.0
 
 # Themes
 schemes:
   purple-vibe: &purple-vibe
     primary:
-      background: '#282a36'
+      background: '#0c0d17'
       foreground: '#f8f8f2'
 
     normal:
