--- a/sway/config
+++ b/sway/config
@@ -1,61 +1,29 @@
+# Dbus (for screensharing :/)
+exec --no-startup-id dbus-update-activation-environment --all
+exec dbus-update-activation-environment WAYLAND_DISPLAY
+
 # Pipewire
 exec gentoo-pipewire-launcher
 
-# Screensharing
-exec dbus-update-activation-environment DISPLAY I3SOCK SWAYSOCK WAYLAND_DISPLAY XDG_CURRENT_DESKTOP=sway
-#exec dbus-launch /usr/libexec/xdg-desktop-portal
-#exec dbus-launch /usr/libexec/xdg-desktop-portal-wlr
+# Restore last bright value
+exec light -I
 
 ### Variables
-#
-# Logo key. Use Mod1 for Alt.
+
+# Mod key
 set $mod Mod4
 
-# Terminal (Kitty)
-set $term kitty
+# Terminal
+set $term alacritty
 
 # Launcher (Bemenu)
 set $menu bemenu-run -n -nf "#7121c2" --tf "#7121c2" --hf "#8e4dff"  | xargs swaymsg exec --
 
-### Output configuration
-#
-# Default wallpaper (more resolutions are available in @datadir@/backgrounds/sway/)
-#output * bg @datadir@/backgrounds/sway/Sway_Wallpaper_Blue_1920x1080.png fill
-#
-# Example configuration:
-#
-#   output HDMI-A-1 resolution 1920x1080 position 1920,0
-#
-# You can get the names of your outputs by running: swaymsg -t get_outputs
-
-### Idle configuration
-#
-# Example configuration:
-#
-# exec swayidle -w \
-#          timeout 300 'swaylock -f -c 000000' \
-#          timeout 600 'swaymsg "output * dpms off"' resume 'swaymsg "output * dpms on"' \
-#          before-sleep 'swaylock -f -c 000000'
-#
-# This will lock your screen after 300 seconds of inactivity, then turn off
-# your displays after another 300 seconds, and turn your screens back on when
-# resumed. It will also lock your screen before your computer goes to sleep.
-
-### Input configuration
-#
-# Example configuration:
-#
-#   input "2:14:SynPS/2_Synaptics_TouchPad" {
-#       dwt enabled
-#       tap enabled
-#       natural_scroll enabled
-#       middle_emulation enabled
-#   }
-#
-# You can get the names of your inputs by running: swaymsg -t get_inputs
-# Read `man 5 sway-input` for more information about this section.
+# Font
+# font pango:Noto Medium 10
 
 ### Key bindings
+
 #
 # Basics:
 #
@@ -102,8 +70,8 @@ set $menu bemenu-run -n -nf "#7121c2" --tf "#7121c2" --hf "#8e4dff"  | xargs swa
 	bindsym XF86AudioMicMute exec --no-startup-id pactl set-source-mute @DEFAULT_SOURCE@ toggle
 
 	# Scren brightness
-	bindsym XF86MonBrightnessUp exec --no-startup-id light -A 10
-	bindsym XF86MonBrightnessDown exec --no-startup-id light -U 10
+	bindsym XF86MonBrightnessUp exec --no-startup-id light -A 10 | light -O
+	bindsym XF86MonBrightnessDown exec --no-startup-id light -U 10 | light -O
 
 	# Screenshot
 	bindsym $mod+p exec --no-startup-id grim - | wl-copy -t image/png
@@ -111,6 +79,9 @@ set $menu bemenu-run -n -nf "#7121c2" --tf "#7121c2" --hf "#8e4dff"  | xargs swa
 
 	# Sticky toggle
 	bindsym $mod+Shift+s sticky toggle
+
+	# Change microphone port
+	bindsym $mod+Shift+m pactl set-source-port @DEFAULT_SOURCE@ +1
 #
 # Moving around:
 #
@@ -235,9 +206,9 @@ gaps inner 7
 smart_borders on
 
 # Wallpaper
-exec_always --no-startup-id killall mpvpaper
+#exec_always --no-startup-id killall mpvpaper
 #exec_always --no-startup-id mpvpaper -o "loop=yes no-audio framedrop=vo" eDP-1 /home/pietrovn/wallpapers/purple_sunset.webm
-exec_always --no-startup-id swaybg -i /home/pietrovn/wallpapers/purple_sunset.png
+#exec_always --no-startup-id swaybg -i /home/pietrovn/wallpapers/purple_sunset.png
 
 # Lockscreen 
 exec_always --no-startup-id swayidle -w timeout 100 "lockscreen"
@@ -247,12 +218,10 @@ for_window [title="."] inhibit_idle fullscreen
 
 # Waybar
 bar {
-    position top
-    status_command while sleep 10; do sh ~/.config/sway/bar.sh; done
+    swaybar_command waybar
+    #position top
+    #status_command while sleep 0; do sh ~/.config/sway/bar.sh; done
 }
 
-exec dbus-update-activation-environment DISPLAY SWAYSOCK WAYLAND_DISPLAY XDG_CURRENT_DESKTOP=sway
-exec dbus-launch /usr/libexec/xdg-desktop-portal
-exec dbus-launch /usr/libexec/xdg-desktop-portal-wlr
 
 include @sysconfdir@/sway/config.d/*
